--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
   <main class="flex-row justify-space-between">
 
   </main>
-
+  <script src="./assets/js/homepage.js"></script>
 </body>
-
 </html>
